--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -14,5 +14,7 @@
 @import "blocks/logo";
 @import "blocks/nav";
 @import "blocks/header__home";
+@import "blocks/nav-logo";
+@import "blocks/authorization-block";
 
 
