--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -58,6 +58,20 @@ body { font-family: 'Roboto', sans-serif; font-size: 20px; }
 .header-home__btn { display: inline-block; padding: 23px 48px; color: #000000; background-color: #e8c253; border-radius: 13px; font-weight: 600; font-size: 30px; line-height: 36px; position: relative; top: 1px; }
 
 .header-home__img { position: relative; }
-.header-home__img::before { content: ''; background: url("../assets/assets/img/home_content/arrow.svg"); width: 300px; height: 181px; position: absolute; }
+.header-home__img::before { content: ''; width: 300px; height: 181px; position: absolute; }
+
+.nav-logo { padding-top: 15px; }
+
+.authorization-block { background-color: #FBE294; border-radius: 39px; padding: 40px 64px 21px 64px; max-width: 544px; margin: 120px auto 0 auto; }
+
+.form__reg { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+
+.reg__title { font-family: 'Inter'; font-weight: 500; font-size: 40px; text-align: center; margin-bottom: 55px; }
+
+.reg__input { border: none; background: #FFFFFF; border-radius: 10px; font-family: 'Inter'; color: #ABABAB; min-width: 416px; padding: 12px 0 12px 13px; }
+
+.reg__submit { display: inline-block; }
+
+.input-group { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; gap: 20px; margin-bottom: 34px; }
 
 /*# sourceMappingURL=main.css.map */
