--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -1,7 +1,6 @@
-/*
-font-family: 'Inter', sans-serif;
-font-family: 'Roboto', sans-serif;
-*/
+*, ::before, ::after {
+  box-sizing: border-box;
+}
 
 body {
   font-family: 'Roboto', sans-serif;
