--- a/assets/sass/blocks/authorization-block.scss
+++ b/assets/sass/blocks/authorization-block.scss
@@ -33,6 +33,27 @@
 
 .reg__submit {
   display: inline-block;
+  position: relative;
+  padding: 9px 44px;
+  background-color: #FFF;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+}
+
+.submit__label {
+  position: relative;
+  margin-bottom: 100px;
+  &:after {
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background-image: url("../img/reg_icons/enter.svg");
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
 
 .input-group {
@@ -40,4 +61,16 @@
   flex-direction: column;
   gap: 20px;
   margin-bottom: 34px;
+}
+
+.account-authorization {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+}
+
+.authorization-img {
+  margin: 9px auto 0 auto;
+  max-width: 285px;
 }
