--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,7 +71,7 @@ body { font-family: 'Roboto', sans-serif; font-size: 20px; }
 .reg__submit { display: inline-block; position: relative; padding: 9px 44px; background-color: #FFF; border: none; border-radius: 7px; cursor: pointer; }
 
 .submit__label { position: relative; margin-bottom: 100px; }
-.submit__label:after { content: ''; position: absolute; width: 20px; height: 20px; background-image: url("../img/reg_icons/enter.svg"); top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
+.submit__label:after { content: ''; position: absolute; width: 20px; height: 20px; background-image: url("../../img/reg_icons/enter.svg"); top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
 
 .input-group { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; gap: 20px; margin-bottom: 34px; }
 
