--- a/assets/sass/blocks/authorization-block.scss
+++ b/assets/sass/blocks/authorization-block.scss
@@ -49,7 +49,7 @@
     position: absolute;
     width: 20px;
     height: 20px;
-    background-image: url("../img/reg_icons/enter.svg");
+    background-image: url("../../img/reg_icons/enter.svg");
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -73,4 +73,8 @@
 .authorization-img {
   margin: 9px auto 0 auto;
   max-width: 285px;
+}
+
+.error-email {
+
 }
