--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,82 +1,252 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap");
-/* http://meyerweb.com/eric/tools/css/reset/ v2.0 | 20110126 License: none (public domain)
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
 */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; }
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
 
-body { line-height: 1; }
+body {
+  line-height: 1; }
 
-ol, ul { list-style: none; }
+ol, ul {
+  list-style: none; }
 
-blockquote, q { quotes: none; }
+blockquote, q {
+  quotes: none; }
 
-blockquote:before, blockquote:after, q:before, q:after { content: ''; content: none; }
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
 
-table { border-collapse: collapse; border-spacing: 0; }
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
 
-a { text-decoration: none; }
+a {
+  text-decoration: none; }
 
-input:focus, button:focus { border: none; outline: none; }
+input:focus, button:focus {
+  border: none;
+  outline: none; }
 
-*, ::before, ::after { -webkit-box-sizing: border-box; box-sizing: border-box; }
+*, ::before, ::after {
+  box-sizing: border-box; }
 
-body { font-family: 'Roboto', sans-serif; font-size: 20px; }
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px; }
 
-.container { max-width: 1280px; padding: 0 20px; margin: 0 auto; }
+.container {
+  max-width: 1280px;
+  padding: 0 20px;
+  margin: 0 auto; }
 
-.logo { color: #000; font-family: 'Inter'; font-size: 62.4px; text-shadow: 6px 4px 7px rgba(0, 0, 0, 0.25); position: relative; }
-.logo::before { content: 'опросы'; font-size: 15.6px; line-height: 19px; position: absolute; right: 0; bottom: -10px; }
+.logo {
+  color: #000;
+  font-family: 'Inter';
+  font-size: 62.4px;
+  text-shadow: 6px 4px 7px rgba(0, 0, 0, 0.25);
+  position: relative; }
+  .logo::before {
+    content: 'опросы';
+    font-size: 15.6px;
+    line-height: 19px;
+    position: absolute;
+    right: 0;
+    bottom: -10px; }
 
-.nav { padding-top: 36px; }
+.nav {
+  padding-top: 36px; }
 
-.nav__row { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.nav__row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
 
-.navigation { font-family: 'Inter'; display: -webkit-box; display: -ms-flexbox; display: flex; gap: 32px; }
+.navigation {
+  font-family: 'Inter';
+  display: flex;
+  gap: 32px; }
 
-.authorization { background: #e8c253; display: inline-block; color: #FFF; padding: 10px 12px; -webkit-transition: .5s; transition: .5s; }
-.authorization:active { position: relative; top: 1px; }
-.authorization:hover { background-color: #ecc660; }
+.authorization {
+  background: #e8c253;
+  display: inline-block;
+  color: #FFF;
+  padding: 10px 12px;
+  transition: .5s; }
+  .authorization:active {
+    position: relative;
+    top: 1px; }
+  .authorization:hover {
+    background-color: #ecc660; }
 
-.navigation-list { display: -webkit-box; display: -ms-flexbox; display: flex; gap: 35px; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-.navigation-list li a { color: #000; }
+.navigation-list {
+  display: flex;
+  gap: 35px;
+  align-items: center; }
+  .navigation-list li a {
+    color: #000; }
 
-.header-home { margin-top: 70px; }
+.header-home {
+  margin-top: 70px; }
 
-.header-home__row { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
+.header-home__row {
+  display: flex;
+  justify-content: space-between; }
 
-.header-home__title { font-size: 86px; line-height: 101px; min-width: 503px; margin-bottom: 20px; }
-.header-home__title span { color: #e8c253; }
+.header-home__title {
+  font-size: 86px;
+  line-height: 101px;
+  min-width: 503px;
+  margin-bottom: 20px; }
+  .header-home__title span {
+    color: #e8c253; }
 
-.header-home__subtitle { font-size: 40px; line-height: 47px; margin-bottom: 45px; color: #9D9D9D; }
+.header-home__subtitle {
+  font-size: 40px;
+  line-height: 47px;
+  margin-bottom: 45px;
+  color: #9D9D9D; }
 
-.header-home__btn { display: inline-block; padding: 23px 48px; color: #000000; background-color: #e8c253; border-radius: 13px; font-weight: 600; font-size: 30px; line-height: 36px; position: relative; top: 1px; }
+.header-home__btn {
+  display: inline-block;
+  padding: 23px 48px;
+  color: #000000;
+  background-color: #e8c253;
+  border-radius: 13px;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 36px;
+  position: relative;
+  top: 1px; }
 
-.header-home__img { position: relative; }
-.header-home__img::before { content: ''; width: 300px; height: 181px; position: absolute; }
+.header-home__img {
+  position: relative; }
+  .header-home__img::before {
+    content: '';
+    width: 300px;
+    height: 181px;
+    position: absolute; }
 
-.nav-logo { padding-top: 15px; }
+.nav-logo {
+  padding-top: 15px; }
 
-.authorization-block { background-color: #FBE294; border-radius: 39px; padding: 40px 64px 21px 64px; max-width: 544px; margin: 120px auto 0 auto; }
+.authorization-block {
+  background-color: #FBE294;
+  border-radius: 39px;
+  padding: 40px 64px 21px 64px;
+  max-width: 544px;
+  margin: 120px auto 0 auto; }
 
-.form__reg { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.form__reg {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
 
-.reg__title { font-family: 'Inter'; font-weight: 500; font-size: 40px; text-align: center; margin-bottom: 55px; }
+.reg__title {
+  font-family: 'Inter';
+  font-weight: 500;
+  font-size: 40px;
+  text-align: center;
+  margin-bottom: 55px; }
 
-.reg__input { border: none; background: #FFFFFF; border-radius: 10px; font-family: 'Inter'; color: #ABABAB; min-width: 416px; padding: 12px 0 12px 13px; }
+.reg__input {
+  border: none;
+  background: #FFFFFF;
+  border-radius: 10px;
+  font-family: 'Inter';
+  color: #ABABAB;
+  min-width: 416px;
+  padding: 12px 0 12px 13px; }
 
-.reg__submit { display: inline-block; position: relative; padding: 9px 44px; background-color: #FFF; border: none; border-radius: 7px; cursor: pointer; }
+.reg__submit {
+  display: inline-block;
+  position: relative;
+  padding: 9px 44px;
+  background-color: #FFF;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer; }
 
-.submit__label { position: relative; margin-bottom: 100px; }
-.submit__label:after { content: ''; position: absolute; width: 20px; height: 20px; background-image: url("../../img/reg_icons/enter.svg"); top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
+.submit__label {
+  position: relative;
+  margin-bottom: 100px; }
+  .submit__label:after {
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background-image: url("../../img/reg_icons/enter.svg");
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
 
-.input-group { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; gap: 20px; margin-bottom: 34px; }
+.input-group {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 34px;
+  position: relative; }
 
-.account-authorization { font-family: 'Inter'; font-style: normal; font-weight: 500; font-size: 14px; }
+.account-authorization {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px; }
 
-.authorization-img { margin: 9px auto 0 auto; max-width: 285px; }
+.authorization-img {
+  margin: 9px auto 0 auto;
+  max-width: 285px; }
+
+.error-email {
+  border: 1px solid #f34646;
+  border-radius: 10px;
+  color: #f34646; }
+  .error-email::after {
+    position: absolute;
+    content: 'Некорректная почта';
+    font-size: 15px;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -30px; }
+
+.error-password {
+  border: 1px solid #f34646;
+  border-radius: 10px;
+  color: #f34646; }
+  .error-password::after {
+    position: absolute;
+    content: 'Некорректный пароль. Используйте только латинские символы!';
+    font-size: 15px;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -10px; }
 
 /*# sourceMappingURL=main.css.map */
